Fix rendering overlap issues

--- a/frontend/src/components/Tree/Tree.module.css
+++ b/frontend/src/components/Tree/Tree.module.css
@@ -8,7 +8,8 @@
 
 .tree {
   overflow: visible;
-  width: 100vw;
+  /*width: 100vw;*/
+  width: 100%;
   height: calc(100vh - 210px);
   min-height: 700px;
 }
